# Agora-Extensions

./: .gitignore  README.md
MediaPlayer/: README.md  README.zh.md
MediaPlayer/helper/android/: README.md
MediaPlayer/helper/ios/: README.md
MediaPlayer/helper/mac/: README.md
MediaPlayer/helper/win/: README.md
MediaPlayer/sample/android/: README.md
MediaPlayer/sample/apple/: README.md
MediaPlayer/sample/ios/: README.md
MediaPlayer/sample/mac/: README.md
MediaPlayer/sample/win/: README.md
MediaPlayer/samples/android/: README.md  README.zh.md
MediaPlayer/samples/android/AgoraPlayer_Quickstart/app/: CMakeLists.txt  build.gradle
MediaPlayer/samples/android/AgoraPlayer_Quickstart/app/lib/: PLACEHOLDER  RtcChannelPublishHelper.aar
MediaPlayer/samples/android/AgoraPlayer_Quickstart/app/src/main/: AndroidManifest.xml
MediaPlayer/samples/android/AgoraPlayer_Quickstart/app/src/main/cpp/: media_player_test.cpp
MediaPlayer/samples/android/AgoraPlayer_Quickstart/app/src/main/java/io/agora/mediaplayer/: MainActivity.java  PlayerCppFragment.java  PlayerFragment.java
MediaPlayer/samples/android/AgoraPlayer_Quickstart/app/src/main/java/io/agora/mediaplayer/quickstart/: MainActivity.java  PlayerFragment.java
MediaPlayer/samples/android/AgoraPlayer_Quickstart/app/src/main/res/layout/: fragment_main.xml  fragment_main_cpp.xml
MediaPlayer/samples/android/AgoraPlayer_Quickstart/app/src/main/res/values/: strings.xml
MediaPlayer/samples/apple/: README.md  README.zh.md
MediaPlayer/samples/win/: README.md
RtmpStreaming/android/: .gitignore  LICENSE  README.md  README.zh.md  build.gradle  gradle.properties  local.example.properties  local.properties  settings.gradle
RtmpStreaming/android/app/: .gitignore  build.gradle
RtmpStreaming/android/faceunity/: .gitignore  build.gradle
RtmpStreaming/android/fulivedemo/: .gitignore  build.gradle
RtmpStreaming/ios/LiveStreaming-iOS-Objective-C/: LiveStreamingWithFU-Info.plist  Podfile  README.md
RtmpStreamingWithBeauty/android/: LICENSE  README.zh.md  build.gradle  settings.gradle
RtmpStreamingWithBeauty/android/app/: build.gradle  proguard-rules.pro
VideoCapture/Android/: README.md
(+245 files in other folders)
